another attempt to hide the editor

--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
     </style>
 </head>
 <body>
-<!--
-<pre id="editor">digraph G {
+<pre id="editor" style="visibility: hidden">digraph G {
 
   subgraph cluster_0 {
     style=filled;
@@ -154,7 +153,6 @@
   start [shape=Mdiamond];
   end [shape=Msquare];
 }</pre>
--->
 <div id="options">
     <label id="engine">
         Engine:
