removed dropdowns for format and engine

--- a/index.html
+++ b/index.html
@@ -154,29 +154,6 @@
   end [shape=Msquare];
 }</pre>
 <div id="options">
-    <label id="engine">
-        Engine:
-        <select>
-            <option>circo</option>
-            <option selected="">dot</option>
-            <option>fdp</option>
-            <option>neato</option>
-            <option>osage</option>
-            <option>twopi</option>
-        </select>
-    </label>
-
-    <label id="format">
-        Format:
-        <select>
-            <option selected="">svg</option>
-            <option>png-image-element</option>
-            <option>json</option>
-            <option>xdot</option>
-            <option>plain</option>
-            <option>ps</option>
-        </select>
-    </label>
 
     <label id="raw" class="disabled">
         <input type="checkbox" disabled=""> Show raw output
@@ -349,8 +326,8 @@
         "id": new Date().toJSON(),
         "options": {
           "files": [],
-          "format": formatEl.value === "png-image-element" ? "svg" : formatEl.value,
-          "engine": engineEl.value
+          "format": "svg",
+          "engine": "dot"
         },
       };
       worker.postMessage(params);
