--- a/index.html
+++ b/index.html
@@ -29,33 +29,6 @@
             overflow: scroll;
         }
 
-        #options {
-            margin: 0;
-            position: fixed;
-            left: 50%;
-            width: 100%;
-        }
-
-        #options {
-            flex: 0 0 auto;
-            background: #eee;
-            border-bottom: 1px solid #ccc;
-            padding: 8px;
-            overflow: hidden;
-        }
-
-        #options label {
-            margin-right: 8px;
-        }
-
-        #options #raw.disabled {
-            opacity: 0.5;
-        }
-
-        #shareurl {
-            display: none;
-        }
-
         #status {
             width: 100%;
             position: fixed;
@@ -153,23 +126,7 @@
   start [shape=Mdiamond];
   end [shape=Msquare];
 }</pre>
-<div id="options">
 
-    <label id="raw" class="disabled">
-        <input type="checkbox" disabled=""> Show raw output
-    </label>
-
-    <label>
-      <a href="#" target="_blank" id="download">Download</a>
-    </label>
-
-    <label>
-        <input type="button" value="Share" id="share">
-    </label>
-
-    <input type="input" value="" id="shareurl">
-
-</div>
 <div id="review">
     <div id="error"></div>
 </div>
@@ -195,9 +152,6 @@
       worker = null,
       parser = new DOMParser(),
       showError = null,
-      rawEl = document.querySelector("#raw input"),
-      shareEl = document.querySelector("#share"),
-      shareURLEl = document.querySelector("#shareurl"),
       errorEl = document.querySelector("#error");
 
     function show_status(text, hide) {
@@ -249,28 +203,6 @@
         }
       }
       svgImage.src = svgXml;
-    }
-
-    function copyShareURL(e) {
-      var content = encodeURIComponent(editor.getSession().getDocument().getValue());
-
-      var xhr = new XMLHttpRequest();
-      xhr.open("POST", "https://api-ssl.bitly.com/v4/shorten", true);
-      xhr.setRequestHeader('Content-Type', 'application/json');
-      /* love and peace; don't let me down :) */
-      xhr.setRequestHeader('Authorization', 'Bearer 5959ae0ffc42f5e6b8cee4ebf1b7ee0218bfc291');
-      xhr.send(JSON.stringify({ "long_url": "https://dreampuf.github.io/GraphvizOnline/#" + content}));
-      xhr.onreadystatechange = function () {
-        if (this.readyState != 4) return;
-
-        shareURLEl.style.display = "inline";
-        if (this.status >= 200 && this.status < 300 && this.responseText.indexOf('"link":') >= 0) {
-          var result = JSON.parse(this.responseText);
-          shareURLEl.value = result.link;
-        } else {
-          shareURLEl.value = "https://dreampuf.github.io/GraphvizOnline/#" + content
-        }
-      };
     }
 
     function copyToClipboard(str) {
@@ -337,8 +269,6 @@
     }
 
     function updateOutput(result) {
-      document.querySelector("#raw").classList.remove("disabled");
-      rawEl.disabled = false;
 
       var text = reviewer.querySelector("#text");
       if (text) {
@@ -356,44 +286,36 @@
 
       reviewer.classList.remove("working");
       reviewer.classList.remove("error");
-
-      if (!rawEl.checked) {
-        var svg = parser.parseFromString(result, "image/svg+xml");
-        //get svg source.
-        var serializer = new XMLSerializer();
-        var source = serializer.serializeToString(svg);
-        //add name spaces.
-        if(!source.match(/^<svg[^>]+xmlns="http\:\/\/www\.w3\.org\/2000\/svg"/)){
-            source = source.replace(/^<svg/, '<svg xmlns="http://www.w3.org/2000/svg"');
-        }
-        if(!source.match(/^<svg[^>]+"http\:\/\/www\.w3\.org\/1999\/xlink"/)){
-            source = source.replace(/^<svg/, '<svg xmlns:xlink="http://www.w3.org/1999/xlink"');
-        }
-        //add xml declaration
-        if (!source.startsWith("<?xml version")) {
-            source = '<?xml version="1.0" standalone="no"?>\r\n' + source;
-        }
-        // https://stackoverflow.com/questions/18925210/download-blob-content-using-specified-charset
-        //const blob = new Blob(["\ufeff", svg], {type: 'image/svg+xml;charset=utf-8'});
-        const url = "data:image/svg+xml;charset=utf-8,"+encodeURIComponent(source);
-        downloadBtn.href = url;
-        downloadBtn.download = "graphviz.svg";
-        var a = document.createElement("a");
-        var svgEl = svg.documentElement;
-        a.appendChild(svgEl);
-        reviewer.appendChild(a);
-        svgPanZoom(svgEl, {
-          zoomEnabled: true,
-          controlIconsEnabled: true,
-          fit: true,
-          center: true,
-        });
-      } else {
-        var text = document.createElement("div");
-        text.id = "text";
-        text.appendChild(document.createTextNode(result));
-        reviewer.appendChild(text);
+      var svg = parser.parseFromString(result, "image/svg+xml");
+      //get svg source.
+      var serializer = new XMLSerializer();
+      var source = serializer.serializeToString(svg);
+      //add name spaces.
+      if(!source.match(/^<svg[^>]+xmlns="http\:\/\/www\.w3\.org\/2000\/svg"/)){
+          source = source.replace(/^<svg/, '<svg xmlns="http://www.w3.org/2000/svg"');
       }
+      if(!source.match(/^<svg[^>]+"http\:\/\/www\.w3\.org\/1999\/xlink"/)){
+          source = source.replace(/^<svg/, '<svg xmlns:xlink="http://www.w3.org/1999/xlink"');
+      }
+      //add xml declaration
+      if (!source.startsWith("<?xml version")) {
+          source = '<?xml version="1.0" standalone="no"?>\r\n' + source;
+      }
+      // https://stackoverflow.com/questions/18925210/download-blob-content-using-specified-charset
+      //const blob = new Blob(["\ufeff", svg], {type: 'image/svg+xml;charset=utf-8'});
+      const url = "data:image/svg+xml;charset=utf-8,"+encodeURIComponent(source);
+      downloadBtn.href = url;
+      downloadBtn.download = "graphviz.svg";
+      var a = document.createElement("a");
+      var svgEl = svg.documentElement;
+      a.appendChild(svgEl);
+      reviewer.appendChild(a);
+      svgPanZoom(svgEl, {
+        zoomEnabled: true,
+        controlIconsEnabled: true,
+        fit: true,
+        center: true,
+      });
 
       updateState()
     }
@@ -410,9 +332,6 @@
         editor.getSession().setValue(decodeURIComponent(event.state.content));
       }
     };
-      
-    rawEl.addEventListener("change", renderGraph);
-    share.addEventListener("click", copyShareURL);
 
     // Since apparently HTMLCollection does not implement the oh so convenient array functions
     HTMLOptionsCollection.prototype.indexOf = function(name) {
@@ -425,24 +344,7 @@
       return -1;
     };
 
-    /* come from sharing */
-    const params = new URLSearchParams(location.search.substring(1));
-    if (params.has('engine')) {
-      const engine = params.get('engine');
-      const index = engineEl.options.indexOf(engine);
-      if (index > -1) { // if index exists
-        engineEl.selectedIndex = index;
-      } else {
-        show_error({ message: `invalid engine ${engine} selected` });
-      }
-    }
-
-    if (params.has('raw')) {
-      editor.getSession().setValue(params.get('raw'));
-      renderGraph();
-    } else if (params.has('compressed')) {
-      const compressed = params.get('compressed');
-    } else if (params.has('url')) {
+    if (params.has('url')) {
       const url = params.get('url');
       let ok = false;
       fetch(url)
